--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/event_scheduling
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 spring.mvc.format.date=yyyy-MM-dd HH:mm:ss
 
