--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.7'
+    implementation 'org.flywaydb:flyway-core'
 }
 
 tasks.named('test') {
