--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/event_scheduling
+spring.datasource.url=jdbc:postgresql://localhost:5432/event_s
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=none
+
+spring.flyway.baselineOnMigrate=true
+spring.flyway.locations=classpath:db/migration
 
 spring.mvc.format.date=yyyy-MM-dd HH:mm:ss
 
