Sending mails when commiting staged event.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.mvc.format.date=yyyy-MM-dd HH:mm:ss
 
 logging.level.com.maciejgogulski=DEBUG
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=xypnios52@gmail.com
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
