--- a/build.gradle
+++ b/build.gradle
@@ -31,14 +31,24 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.1'
+
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.postgresql:postgresql:42.3.8'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.7'
+
     implementation 'org.flywaydb:flyway-core'
+    testImplementation group: 'org.flywaydb.flyway-test-extensions', name: 'flyway-spring-test', version: '9.5.0'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+test {
+    systemProperties = [
+            'spring.profiles.active': 'test'
+    ]
 }
