--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ logging.level.com.maciejgogulski=DEBUG
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=xypnios52@gmail.com
-spring.mail.password=
+spring.mail.password=rwlu ktmg gksi dptd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
