Cors configuration update.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 e-mail.template-filename=template
 
+app.cors.allowed-origins=http://localhost:3000
+
 
 
