--- a/src/main/resources/application-docker-local.properties
+++ b/src/main/resources/application-docker-local.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/event_s
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/event_s
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 
 spring.flyway.baselineOnMigrate=true
-spring.flyway.locations=classpath:db/migration
+spring.flyway.locations=classpath:db/migration,classpath:db/demo
 
 spring.mvc.format.date=yyyy-MM-dd HH:mm:ss
 
